awx connection with credentials
